--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block footer %}
-<h3>This footer from catan.html overrides the default footer?</h3>
+<h3>Home Footer</h3>
 {% endblock %}
 
 
